--- a/client/src/assets/css/app.scss
+++ b/client/src/assets/css/app.scss
@@ -3,6 +3,7 @@
 
 $primary-color: #06de99;
 $secondary-color: #2d322f;
+$text-color: #5e6360;
 $white: #ffffff;
 
 * {
@@ -14,8 +15,14 @@ $white: #ffffff;
 
 .header {
     background-color: $white;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+    border-bottom: 1px solid #d8d8d8;
 
+}
+
+.dropdown-menu {
+    left: unset;
+    right: 0;
+    min-width: 12rem;
 }
 
 .logo {
@@ -36,10 +43,98 @@ $white: #ffffff;
 }
 
 .nav-link {
-    color: $secondary-color;
+    color: $text-color;
     transition: all .25s;
 
     &:hover {
         color: $primary-color;
     }
+}
+
+.login {
+    background-color: #fafafa;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card {
+    border: 1px solid #d8d8d8;
+}
+
+.card-header {
+    padding: 25px 15px;
+    background-color: $white;
+    border: none;
+    text-align: center;
+
+    h1 {
+        font-size: 30px;
+    }
+}
+
+.card-footer {
+    padding: 0 0 15px 0;
+    background-color: $white;
+    border: none;
+    text-align: center; 
+}
+
+.card-link {
+    color: $secondary-color;
+}
+
+.primary-button {
+    background-color: $primary-color;
+    padding: 10px 25px;
+    border-radius: 4px;
+    border: none;
+    color: $white;
+}
+
+.hero-home {
+    width: 100%;
+    min-height: 700px;
+    background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), url(../images/hero-home.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.hero-title {
+    color: $white;
+    text-align: center;
+    font-weight: 600;
+}
+
+.hero-subtitle {
+    color: $white;
+    text-align: center;
+    font-size: 20px;
+}
+
+.button {
+    padding: 15px 50px;
+    color: $white;
+    border-radius: 4px;
+    font-size: 18px;
+    box-shadow: 0 3px 6px rgba(0,0,0,.12);
+    text-decoration: none !important;
+    transition: all .25s;
+    margin: 10px;
+
+    &:hover {
+        color: $white;
+    }
+}
+
+.primary-button {
+    background-color: $primary-color;
+}
+
+.secondary-button {
+    background-color: #536eec;
 }
