--- a/client/src/assets/css/app.scss
+++ b/client/src/assets/css/app.scss
@@ -13,10 +13,17 @@ $white: #ffffff;
     font-family: 'Poppins', sans-serif;
 }
 
+body {
+    background-color: #fafafa;
+}
+
 .header {
     background-color: $white;
     border-bottom: 1px solid #d8d8d8;
-
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1;
 }
 
 .dropdown-menu {
@@ -45,7 +52,7 @@ $white: #ffffff;
 .icon-bar {
 	width: 22px; 
 	height: 2px;
-	background-color: $text-color;
+	background-color: $secondary-color;
 	display: block;
 	transition: all 0.2s;
 	margin-top: 4px
@@ -57,6 +64,11 @@ $white: #ffffff;
   background: transparent !important;
 }
  
+.navbar-toggler-menu {
+    font-size: 16px;
+    margin-top: 5px;
+}
+
 .navbar-toggler .top-bar {
   transform: rotate(45deg);
   transform-origin: 10% 10%;
@@ -182,4 +194,65 @@ $white: #ffffff;
 
 .secondary-button {
     background-color: #536eec;
+}
+
+.job-card {
+    width: 100%;
+    padding: 15px;
+    border: 1px solid #d8d8d8;
+    position: relative;
+    background-color: $white;
+    border-radius: 4px;
+    transition: all .25s;
+
+    &:hover {
+        background-color: #eef0f1;
+    }
+}
+
+.job-card-image {
+    margin-right: 15px;
+
+    img {
+        width: 75px;
+        height: 75px;
+        object-fit: cover;
+        object-position: center;
+    }
+}
+
+.job-card-type {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: rgba(255,193,7,.5);
+    font-size: 12px;
+    padding: 3px 10px;
+    font-weight: 700;
+}
+
+.job-card-title {
+    font-weight: 500;
+    font-size: 20px;
+
+    a {
+        color: $secondary-color;
+        transition: all .25s;
+        &:hover {
+            color: $secondary-color;
+        }
+    }
+}
+
+.job-card-company {
+    font-size: 14px;
+
+    span {
+        font-weight: 700;
+    }
+}
+
+.job-card-desc {
+    font-size: 16px;
+    color: $text-color;
 }
