--- a/client/src/assets/css/app.scss
+++ b/client/src/assets/css/app.scss
@@ -26,6 +26,16 @@ body {
     z-index: 1;
 }
 
+label {
+    margin-bottom: 0;
+    font-weight: 500;
+}
+
+.form-text {
+    margin-top: 0;
+    margin-bottom: 5px;
+}
+
 .dropdown-menu {
     left: unset;
     right: 0;
@@ -35,7 +45,7 @@ body {
 .avatar-image {
     font-size: 20px;
     margin-right: 5px;
-    color: #536eec;
+    color: #dad9d9;
 }
 
 .logo {
@@ -268,6 +278,13 @@ body {
     color: $text-color;
 }
 
-.login, .register, .profile {
+.login, .register, .profile, .create-job {
     margin-top: 114px;
+}
+
+.create-job-panel {
+    padding: 25px;
+    background-color: $white;
+    border: 1px solid #d8d8d8;
+    border-radius: 4px;
 }
