--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -9,7 +9,10 @@
 }
 
 body {
+  overflow-x: hidden;
   background-color: #fafafa;
+  width: 100%;
+  height: 100%;
 }
 
 .header {
@@ -40,7 +43,7 @@ label {
 .avatar-image {
   font-size: 20px;
   margin-right: 5px;
-  color: #dad9d9;
+  color: #536eec;
 }
 
 .logo {
@@ -56,13 +59,9 @@ label {
   transition: all .25s;
 }
 
-.logo:hover {
-  color: #06de99;
-}
-
 .logo i {
   font-size: 30px;
-  color: #06de99;
+  color: #536eec;
   margin-right: 5px;
 }
 
@@ -74,6 +73,10 @@ label {
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
   margin-top: 4px;
+}
+
+.navbar {
+  padding: .5rem 0rem;
 }
 
 .navbar-toggler {
@@ -119,6 +122,10 @@ label {
           transform: rotate(0);
 }
 
+.dropdown-toggle:hover {
+  color: #5e6360 !important;
+}
+
 .nav-link {
   color: #5e6360;
   -webkit-transition: all .25s;
@@ -126,14 +133,16 @@ label {
 }
 
 .nav-link:hover {
-  color: #06de99;
+  color: #536eec;
 }
 
 .post-job {
-  color: #536eec;
-  border: 1px solid #536eec;
+  color: #ffffff;
+  background-color: #536eec;
   border-radius: 4px;
-  padding: 3px 5px;
+  padding: 5px;
+  -webkit-box-shadow: 0 2px 4px 0 rgba(45, 50, 47, 0.2);
+          box-shadow: 0 2px 4px 0 rgba(45, 50, 47, 0.2);
 }
 
 .post-job i {
@@ -141,7 +150,9 @@ label {
 }
 
 .post-job:hover {
-  color: #536eec;
+  -webkit-transform: translateY(-2px);
+          transform: translateY(-2px);
+  color: #ffffff;
 }
 
 .nav-link-logout {
@@ -180,6 +191,32 @@ label {
   border-radius: 4px;
   border: none;
   color: #ffffff;
+  -webkit-box-shadow: 0 2px 4px 0 rgba(45, 50, 47, 0.2);
+          box-shadow: 0 2px 4px 0 rgba(45, 50, 47, 0.2);
+  -webkit-transition: all .25s;
+  transition: all .25s;
+}
+
+.primary-button:hover {
+  -webkit-transform: translateY(-2px);
+          transform: translateY(-2px);
+}
+
+.secondary-button {
+  background-color: #536eec;
+  padding: 10px 25px;
+  border-radius: 4px;
+  border: none;
+  color: #ffffff;
+  -webkit-box-shadow: 0 2px 4px 0 rgba(45, 50, 47, 0.2);
+          box-shadow: 0 2px 4px 0 rgba(45, 50, 47, 0.2);
+  -webkit-transition: all .25s;
+  transition: all .25s;
+}
+
+.secondary-button:hover {
+  -webkit-transform: translateY(-2px);
+          transform: translateY(-2px);
 }
 
 .hero-home {
@@ -220,6 +257,11 @@ label {
           justify-content: center;
 }
 
+.hero-create-job {
+  background-color: #536eec;
+  min-height: calc(57px + 200px);
+}
+
 .hero-show-job {
   background-color: #ffffff;
   min-height: 200px;
@@ -230,6 +272,12 @@ label {
       -ms-flex-align: center;
           align-items: center;
   margin-top: 57px;
+}
+
+@media (max-width: 767px) {
+  .hero-show-job {
+    min-height: 150px;
+  }
 }
 
 .hero-show-job .hero-title {
@@ -251,10 +299,37 @@ label {
   font-weight: 600;
 }
 
+@media (max-width: 767px) {
+  .hero-title {
+    font-size: 36px;
+  }
+}
+
+.hero-innertitle {
+  color: #06de99;
+}
+
+.section-title {
+  color: #2d322f;
+  font-size: 30px;
+}
+
+@media (max-width: 767px) {
+  .section-title {
+    font-size: 20px;
+  }
+}
+
 .hero-subtitle {
   color: #ffffff;
   text-align: center;
   font-size: 20px;
+}
+
+@media (max-width: 767px) {
+  .hero-subtitle {
+    font-size: 16px;
+  }
 }
 
 .button {
@@ -272,14 +347,6 @@ label {
 
 .button:hover {
   color: #ffffff;
-}
-
-.primary-button {
-  background-color: #06de99;
-}
-
-.secondary-button {
-  background-color: #536eec;
 }
 
 .job-card {
@@ -348,12 +415,13 @@ label {
   color: #5e6360;
 }
 
-.login, .register, .profile, .create-job {
+.login, .register, .profile {
   margin-top: 114px;
 }
 
 .create-job-panel {
   padding: 25px;
+  margin-bottom: 25px;
   background-color: #ffffff;
   border: 1px solid #d8d8d8;
   border-radius: 4px;
@@ -378,6 +446,30 @@ label {
   margin-right: 15px;
 }
 
+@media (max-width: 767px) {
+  .single-job-title img {
+    width: 55px;
+    height: 55px;
+  }
+}
+
+@media (max-width: 767px) {
+  .single-job-title-text span {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 767px) {
+  .single-job-link-website {
+    font-size: 12px !important;
+  }
+}
+
+.single-job-title-at {
+  color: #5e6360;
+  margin-right: 10px;
+}
+
 .single-job-link {
   color: #06de99;
   font-size: 14px;
@@ -388,5 +480,81 @@ label {
 .single-job-link:hover {
   text-decoration: none;
   color: #536eec;
+}
+
+.single-job-info {
+  padding: 15px 0;
+}
+
+.single-job-info-title {
+  font-weight: 700;
+  color: #2d322f;
+}
+
+.single-job-info-value {
+  color: #5e6360;
+}
+
+.single-job-company {
+  background-color: #ffffff;
+  padding: 50px 0;
+}
+
+.single-job-company .section-title {
+  margin-bottom: 25px;
+}
+
+.single-job-company-text {
+  color: #5e6360;
+}
+
+@media (max-width: 767px) {
+  .single-job-company-text {
+    font-size: 14px;
+  }
+}
+
+.single-job-company-skills {
+  margin-top: 50px;
+}
+
+.skill-tag {
+  display: inline-block;
+  padding: 12.5px 25px;
+  background-color: #536eec;
+  color: #ffffff;
+  border-radius: 25px;
+}
+
+.single-job-apply {
+  background-color: #fafafa;
+  padding: 15px;
+}
+
+.single-job-apply .apply-button {
+  color: #ffffff;
+  background-color: #f75679;
+  border-radius: 4px;
+  padding: 8px 15px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-shadow: 0 2px 4px 0 rgba(45, 50, 47, 0.2);
+          box-shadow: 0 2px 4px 0 rgba(45, 50, 47, 0.2);
+  -webkit-transition: all .25s;
+  transition: all .25s;
+}
+
+.single-job-apply .apply-button:hover {
+  text-decoration: none;
+  -webkit-transform: translateY(-2px);
+          transform: translateY(-2px);
 }
 /*# sourceMappingURL=app.css.map */
