--- a/client/src/assets/css/app.scss
+++ b/client/src/assets/css/app.scss
@@ -3,6 +3,7 @@
 
 $primary-color: #06de99;
 $secondary-color: #2d322f;
+$blue-color:#536eec;
 $text-color: #5e6360;
 $white: #ffffff;
 
@@ -14,7 +15,10 @@ $white: #ffffff;
 }
 
 body {
+    overflow-x: hidden;
     background-color: #fafafa;
+    width: 100%;
+    height: 100%;
 }
 
 .header {
@@ -45,7 +49,7 @@ label {
 .avatar-image {
     font-size: 20px;
     margin-right: 5px;
-    color: #dad9d9;
+    color: $blue-color;
 }
 
 .logo {
@@ -55,12 +59,9 @@ label {
     font-family: 'Architects Daughter', cursive;
     transition: all .25s;
 
-    &:hover {
-        color: $primary-color;
-    }
     i {
         font-size: 30px;
-        color: $primary-color;
+        color: $blue-color;
         margin-right: 5px;
        }
 }
@@ -72,6 +73,10 @@ label {
 	display: block;
 	transition: all 0.2s;
 	margin-top: 4px
+}
+
+.navbar {
+    padding: .5rem 0rem;
 }
  
 .navbar-toggler {
@@ -111,27 +116,35 @@ label {
   transform: rotate(0);
 }
 
+.dropdown-toggle {
+    &:hover {
+        color: $text-color !important;
+    }
+}
+
 .nav-link {
     color: $text-color;
     transition: all .25s;
 
     &:hover {
-        color: $primary-color;
+        color: $blue-color;
     }
 }
 
 .post-job {
-    color: #536eec;
-    border: 1px solid #536eec;
+    color: $white;
+    background-color: $blue-color;
     border-radius: 4px;
-    padding: 3px 5px;
+    padding: 5px;
+    box-shadow: 0 2px 4px 0 rgba(45,50,47, .2);
 
     i {
         font-size: 14px;
     }
 
     &:hover {
-        color: #536eec;
+        transform: translateY(-2px);
+        color:  $white;
     }
 }
 
@@ -171,6 +184,26 @@ label {
     border-radius: 4px;
     border: none;
     color: $white;
+    box-shadow: 0 2px 4px 0 rgba(45,50,47, .2);
+    transition: all .25s;
+
+    &:hover {
+        transform: translateY(-2px);
+    }
+}
+
+.secondary-button {
+    background-color: $blue-color;
+    padding: 10px 25px;
+    border-radius: 4px;
+    border: none;
+    color: $white;
+    box-shadow: 0 2px 4px 0 rgba(45,50,47, .2);
+    transition: all .25s;
+
+    &:hover {
+        transform: translateY(-2px);
+    }
 }
 
 .hero-home {
@@ -197,6 +230,11 @@ label {
     justify-content: center;
 }
 
+.hero-create-job {
+    background-color: $blue-color;
+    min-height: calc(57px + 200px);
+}
+
 .hero-show-job {
     background-color: $white;
     min-height: 200px;
@@ -204,6 +242,10 @@ label {
     align-items: center;
     margin-top: 57px;
 
+    @media(max-width: 767px) {
+        min-height: 150px;
+    }
+    
     .hero-title {
         color: $secondary-color;
         text-transform: capitalize;
@@ -220,12 +262,33 @@ label {
     color: $white;
     text-align: center;
     font-weight: 600;
+
+    @media(max-width: 767px) {
+        font-size: 36px;
+    }
+}
+
+.hero-innertitle {
+    color: $primary-color;
+}
+
+.section-title {
+    color: $secondary-color;
+    font-size: 30px;
+
+    @media(max-width: 767px) {
+        font-size: 20px;
+    }
 }
 
 .hero-subtitle {
     color: $white;
     text-align: center;
     font-size: 20px;
+
+    @media(max-width: 767px) {
+        font-size: 16px;
+    }
 }
 
 .button {
@@ -241,14 +304,6 @@ label {
     &:hover {
         color: $white;
     }
-}
-
-.primary-button {
-    background-color: $primary-color;
-}
-
-.secondary-button {
-    background-color: #536eec;
 }
 
 .job-card {
@@ -312,12 +367,13 @@ label {
     color: $text-color;
 }
 
-.login, .register, .profile, .create-job {
+.login, .register, .profile {
     margin-top: 114px;
 }
 
 .create-job-panel {
     padding: 25px;
+    margin-bottom: 25px;
     background-color: $white;
     border: 1px solid #d8d8d8;
     border-radius: 4px;
@@ -333,7 +389,31 @@ label {
         object-fit: cover;
         object-position: center;
         margin-right: 15px;
+
+        @media (max-width: 767px) {
+            width: 55px;
+            height: 55px;
+        }
     }
+}
+
+.single-job-title-text {
+    span {
+        @media (max-width: 767px) {
+            font-size: 12px;
+        }
+    }
+}
+
+.single-job-link-website {
+    @media (max-width: 767px) {
+        font-size: 12px !important;
+    }
+}
+
+.single-job-title-at {
+    color: $text-color;
+    margin-right: 10px;
 }
 
 .single-job-link {
@@ -344,5 +424,69 @@ label {
     &:hover {
         text-decoration: none;
         color: #536eec;
+    }
+}
+
+.single-job-info {
+    padding: 15px 0;
+}
+
+.single-job-info-title {
+    font-weight: 700;
+    color: $secondary-color;
+}
+.single-job-info-value {
+    color: $text-color;
+}
+
+.single-job-company {
+    background-color: $white;
+    padding: 50px 0;
+
+    .section-title {
+        margin-bottom: 25px;
+    }
+}
+
+.single-job-company-text {
+    color: $text-color;
+
+    @media(max-width: 767px) {
+        font-size: 14px;
+    }
+}
+
+.single-job-company-skills {
+    margin-top: 50px;
+}
+
+.skill-tag {
+    display: inline-block;
+    padding: 12.5px 25px;
+    background-color: #536eec;
+    color: $white;
+    border-radius: 25px;
+}
+
+.single-job-apply {
+    background-color: #fafafa;
+    padding: 15px;
+
+    .apply-button {
+        color: $white;
+        background-color: #f75679;
+        border-radius: 4px;
+        padding: 8px 15px;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        box-shadow: 0 2px 4px 0 rgba(45,50,47, .2);
+        transition: all .25s;
+
+        &:hover {
+            text-decoration: none;
+            transform: translateY(-2px);
+        }
     }
 }
