--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -1,5 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap");
+.bg-yellow {
+  background-color: rgba(255, 193, 7, 0.5);
+}
+
+.bg-red {
+  background-color: #f75679;
+  color: #ffffff;
+}
+
+.bg-blue {
+  background-color: #536eec;
+  color: #ffffff;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -29,6 +43,22 @@ label {
   font-weight: 500;
 }
 
+.form-control::-webkit-input-placeholder {
+  font-size: 14px;
+}
+
+.form-control:-ms-input-placeholder {
+  font-size: 14px;
+}
+
+.form-control::-ms-input-placeholder {
+  font-size: 14px;
+}
+
+.form-control::placeholder {
+  font-size: 14px;
+}
+
 .form-text {
   margin-top: 0;
   margin-bottom: 5px;
@@ -38,6 +68,12 @@ label {
   left: unset;
   right: 0;
   min-width: 12rem;
+}
+
+@media (max-width: 767px) {
+  .dropdown-menu .nav-link {
+    padding: 0 10px;
+  }
 }
 
 .avatar-image {
@@ -140,9 +176,11 @@ label {
   color: #ffffff;
   background-color: #536eec;
   border-radius: 4px;
-  padding: 5px;
+  padding: 5px 10px;
   -webkit-box-shadow: 0 2px 4px 0 rgba(45, 50, 47, 0.2);
           box-shadow: 0 2px 4px 0 rgba(45, 50, 47, 0.2);
+  -webkit-transition: all .25s;
+  transition: all .25s;
 }
 
 .post-job i {
@@ -153,6 +191,7 @@ label {
   -webkit-transform: translateY(-2px);
           transform: translateY(-2px);
   color: #ffffff;
+  text-decoration: none;
 }
 
 .nav-link-logout {
@@ -186,7 +225,7 @@ label {
 }
 
 .primary-button {
-  background-color: #06de99;
+  background-color: #32d6a1;
   padding: 10px 25px;
   border-radius: 4px;
   border: none;
@@ -200,6 +239,8 @@ label {
 .primary-button:hover {
   -webkit-transform: translateY(-2px);
           transform: translateY(-2px);
+  text-decoration: none;
+  color: #ffffff;
 }
 
 .secondary-button {
@@ -217,6 +258,8 @@ label {
 .secondary-button:hover {
   -webkit-transform: translateY(-2px);
           transform: translateY(-2px);
+  text-decoration: none;
+  color: #ffffff;
 }
 
 .hero-home {
@@ -224,6 +267,7 @@ label {
   min-height: 700px;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url(../images/hero-home-1.jpg);
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/hero-home-1.jpg);
+  background-color: #fafafa;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -262,6 +306,13 @@ label {
   min-height: calc(57px + 200px);
 }
 
+@media (max-width: 767px) {
+  .hero-buttons a.button {
+    display: block;
+    padding: 15px 25px;
+  }
+}
+
 .hero-show-job {
   background-color: #ffffff;
   min-height: 200px;
@@ -290,6 +341,7 @@ label {
 @media (max-width: 767px) {
   .hero-show-job .hero-title {
     font-size: 20px;
+    margin-bottom: 0;
   }
 }
 
@@ -306,7 +358,7 @@ label {
 }
 
 .hero-innertitle {
-  color: #06de99;
+  color: #32d6a1;
 }
 
 .section-title {
@@ -381,10 +433,10 @@ label {
   position: absolute;
   top: 0;
   right: 0;
-  background-color: rgba(255, 193, 7, 0.5);
   font-size: 12px;
   padding: 3px 10px;
   font-weight: 700;
+  border-bottom-left-radius: 2px;
 }
 
 .job-card-title {
@@ -411,8 +463,14 @@ label {
 }
 
 .job-card-desc {
-  font-size: 16px;
+  font-size: 14px;
   color: #5e6360;
+}
+
+.job-card-desc h1, .job-card-desc h2, .job-card-desc h3, .job-card-desc h4, .job-card-desc h5, .job-card-desc h6, .job-card-desc p, .job-card-desc a {
+  font-size: 14px;
+  margin-bottom: 0;
+  font-weight: 400;
 }
 
 .login, .register, .profile {
@@ -471,7 +529,7 @@ label {
 }
 
 .single-job-link {
-  color: #06de99;
+  color: #32d6a1;
   font-size: 14px;
   -webkit-transition: all .25s;
   transition: all .25s;
@@ -480,6 +538,12 @@ label {
 .single-job-link:hover {
   text-decoration: none;
   color: #536eec;
+}
+
+@media (max-width: 767px) {
+  .single-job-link {
+    display: block;
+  }
 }
 
 .single-job-info {
@@ -506,6 +570,15 @@ label {
 
 .single-job-company-text {
   color: #5e6360;
+}
+
+.single-job-company-text h1, .single-job-company-text h2, .single-job-company-text h3, .single-job-company-text h4, .single-job-company-text h5, .single-job-company-text h6 {
+  color: #2d322f;
+}
+
+.single-job-company-text img {
+  max-width: 100%;
+  height: auto;
 }
 
 @media (max-width: 767px) {
