--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -59,6 +59,10 @@ label {
   font-size: 14px;
 }
 
+.inpu-search {
+  padding: 1.375rem .75rem;
+}
+
 .form-text {
   margin-top: 0;
   margin-bottom: 5px;
@@ -226,7 +230,7 @@ label {
 
 .primary-button {
   background-color: #32d6a1;
-  padding: 10px 25px;
+  padding: 8px 25px;
   border-radius: 4px;
   border: none;
   color: #ffffff;
@@ -245,7 +249,7 @@ label {
 
 .secondary-button {
   background-color: #536eec;
-  padding: 10px 25px;
+  padding: 8px 25px;
   border-radius: 4px;
   border: none;
   color: #ffffff;
