--- a/client/src/assets/css/app.scss
+++ b/client/src/assets/css/app.scss
@@ -52,6 +52,10 @@ label {
     font-size: 14px;
 }
 
+.inpu-search {
+    padding: 1.375rem .75rem;
+}
+
 .form-text {
     margin-top: 0;
     margin-bottom: 5px;
@@ -205,7 +209,7 @@ label {
 
 .primary-button {
     background-color: $primary-color;
-    padding: 10px 25px;
+    padding: 8px 25px;
     border-radius: 4px;
     border: none;
     color: $white;
@@ -221,7 +225,7 @@ label {
 
 .secondary-button {
     background-color: $blue-color;
-    padding: 10px 25px;
+    padding: 8px 25px;
     border-radius: 4px;
     border: none;
     color: $white;
