--- a/client/src/assets/css/app.scss
+++ b/client/src/assets/css/app.scss
@@ -241,7 +241,7 @@ label {
 
 .hero-home {
     width: 100%;
-    min-height: 700px;
+    min-height: 500px;
     background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), url(../images/hero-home-1.jpg);
     background-color: #fafafa;
     background-position: center;
@@ -250,6 +250,8 @@ label {
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-top: 100px;
+    padding-bottom: 50px;
 }
 
 .hero-about {
