--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -268,7 +268,7 @@ label {
 
 .hero-home {
   width: 100%;
-  min-height: 700px;
+  min-height: 500px;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url(../images/hero-home-1.jpg);
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/hero-home-1.jpg);
   background-color: #fafafa;
@@ -284,6 +284,8 @@ label {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  padding-top: 100px;
+  padding-bottom: 50px;
 }
 
 .hero-about {
