--- a/client/src/assets/css/app.scss
+++ b/client/src/assets/css/app.scss
@@ -47,7 +47,7 @@ body {
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
 }
 
 label {
@@ -288,6 +288,7 @@ label {
         @media(max-width: 767px) {
             display: block;
             padding: 12px 25px;
+            font-size: 16px;
         }
     }
 }
@@ -320,6 +321,7 @@ label {
     color: $white;
     text-align: center;
     font-weight: 600;
+    font-size: 3.5rem;
 
     @media(max-width: 767px) {
         font-size: 28px;
@@ -373,7 +375,7 @@ label {
     border-radius: 4px;
     transition: all .25s;
     display: flex;
-    margin-bottom: 15px;
+    height: 100%;
 
     &:hover {
         background-color: #eef0f1;
@@ -440,6 +442,10 @@ label {
     display: inline-block;
     border-radius: 20px;
     margin: 0 5px 5px 0;
+
+    @media(max-width: 767px) {
+        font-size: 12px;
+    }
 }
 
 .job-card-desc {
